--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <header>
     <!DOCTYPE html>
     <html lang="pt-BR">
-
-    <head>
-        <meta charset="utf-8">
-        <script type="text/javascript" src="jquery-1.8.3.js"></script>
-        <script src="javascripter.js"></script>
+    <meta charset="utf-8">
+    <script type="text/javascript" src="jquery-1.8.3.js"></script>
+    <script src="javascripter.js"></script>
+    <link rel="stylesheet" type="text/css" href="csser.css">
 </header>
 
-<head>
-    <h1>Calculadora de IMC</h1>
-</head>
+
 
 <body>
+    <div id="menuSuper">
 
-    <label for="altura">Altura</label>
-    <input id="altura" type="number" name="altura"></input>
+        <head>
+            <h1>Calculadora de IMC</h1>
+        </head>
+    </div>
 
-    <label for="peso">Peso</label>
-    <input id="peso" type="number" name="peso"></input>
+    <div id="calc">
+        <label for="altura">Altura</label>
+        <input id="altura" type="number" name="altura"></input>
+
+        <label for="peso">Peso</label>
+        <input id="peso" type="number" name="peso"></input>
 
 
-    <button id="calcB" name="calcB" onclick="calculadoraIMC()">Cálculo</button>
+        <button id="calcB" name="calcB" onclick="calculadoraIMC()">Cálculo</button>
+    </div>
 </body>
